[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"
description = "Doing advent of code in rust"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/RichoDemus/advent-of-code-2025"
keywords = ["aoc","advent-of-code"]
categories = ["games"]

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.14"
num-bigint = "0.4.6"
#log = "0.4.29"
#dashmap = "7.0.0-rc2"
#pathfinding = "4.14.0"

#parse-display = "0.10"
#anyhow = "1.0.75"
#regex = "1.5.4"
#colored = "2.0.0"
#num-bigint = "0.4.3"
#num-traits = "0.2.15"
#strum = { version = "0.23", features = ["derive"] }
#split-iter = "0.1.0"
#once_cell = "1.19"
#phf = { version = "0.11.2" , features = ["macros"]}
#pathfinding = "3.0.5"
#pathfinding = "4.1.0"
#ouroboros = "0.14.0"
